--- a/members/B001320.yaml
+++ b/members/B001320.yaml
@@ -142,10 +142,10 @@ contact_form:
             Wyoming: WY
     - javascript:
         - value: document.querySelector("#form-field-field_01539f0").value = document.querySelector("#form-field-field_01539f0").value.replace(/"/g, '');
-    - javascript:
-        - value: document.querySelector("#g-recaptcha-response").style.display = "block";
-    - recaptcha:
-        - value: true
+    # - javascript:
+    #     - value: document.querySelector("#g-recaptcha-response").style.display = "block";
+    # - recaptcha:
+    #     - value: true
     - click_on:
         - selector: button[type='submit']
     - wait:
