--- a/members/K000384.yaml
+++ b/members/K000384.yaml
@@ -123,7 +123,7 @@ contact_form:
         value: "No"
         required: Yes
     - javascript:
-        - value: document.querySelector("#input-B388B084-5056-A066-6090-BF0C2E9BE07B").value = document.querySelector("#input-B388B084-5056-A066-6090-BF0C2E9BE07B").value.replace(/"/g, '').replace(/’/g, '');
+        - value: document.querySelector("#input-B388B084-5056-A066-6090-BF0C2E9BE07B").value = document.querySelector("#input-B388B084-5056-A066-6090-BF0C2E9BE07B").value.replace(/"/g, '');
     - click_on:
       - value: Submit
         selector: ".controls button[type='submit']"
