--- a/members/M001198.yaml
+++ b/members/M001198.yaml
@@ -4,8 +4,8 @@ contact_form:
   action: "https://www.marshall.senate.gov/contact/contact-form/"
   steps:
     - visit: "https://www.marshall.senate.gov/contact/contact-form/"
-    - javascript:
-        - value: "Array.prototype.forEach.call(document.querySelectorAll('style,[rel=\"stylesheet\"],[type=\"text/css\"]'), function(element){ try{ element.parentNode.removeChild(element) } catch(err){} });"
+    # - javascript:
+    #     - value: "Array.prototype.forEach.call(document.querySelectorAll('style,[rel=\"stylesheet\"],[type=\"text/css\"]'), function(element){ try{ element.parentNode.removeChild(element) } catch(err){} });"
     - fill_in:
         - name: "input_2"
           selector: "#input_11_2"
@@ -106,11 +106,11 @@ contact_form:
             - Women's Issues
     - click_on:
         - name: "input_18"
-          selector: "#choice_11_18_1" 
+          selector: "#choice_11_18_1"
     - find:
-        - selector: "#gform_submit_button_11" 
+        - selector: "#gform_submit_button_11"
     - click_on:
-        - selector: "#gform_submit_button_11"   
+        - selector: "#gform_submit_button_11"
   success:
     headers:
       status: 200
